syntax = "proto3";
option go_package = "./";

package proto;

message AddBookRequest {
  string book_name = 1;
  string category_id = 2;
  int64 author_id = 3;
}

message AddCategoryRequest {
  string name = 1;
  string parent_uuid = 2;
}

message AddAuthorRequest {
  string name = 1;
}

message UpdateBookRequest {
  int64 book_uuid = 1;
  string book_name = 2;
  string category_id = 3;
  int64 author_id = 4;
}

message UpdateAuthorRequest {
  int64 author_uuid = 1;
  string author_name = 2;
}

message UpdateCategoryRequest {
  int64 category_uuid = 1;
  string category_name = 2;
  int64 parent_uuid = 3;
}

message BookId {
  int64 book_uuid = 1;
}

message Book {
  int64 book_uuid = 1;
  string name = 2;
  string author = 3;
  string categories = 4;
}

message Author {
  int64 author_uuid = 1;
  string name = 2;
}

message Category {
  int64 category_uuid = 1;
  string parent_uuid = 2;
  string name = 3;
}

message BookData {
  string result = 1;
}

message AuthorId {
  int64 author_uuid = 1;
}

message AuthorData {
  string result = 1;
}

message CategoryId {
  int64 category_uuid = 1;
}

message CategoryData {
  string result = 1;
}

message PageNumber {
  int64 page_number = 1;
}

message Response {
  bool success = 1;
}

service BooksService {
  rpc AddBook(AddBookRequest) returns (Book);
  rpc UpdateBook(UpdateBookRequest) returns (Book);
  rpc DeleteBook(BookId) returns (Response);
  rpc ShowBook(BookId) returns (BookData);
  rpc FilterByAuthor(AuthorId) returns (BookData);
  rpc FilterByCategory(CategoryId) returns (BookData);
  rpc Paginate(PageNumber) returns (BookData);
  rpc AddAuthor(AddAuthorRequest) returns (Author);
  rpc AddCategory(AddCategoryRequest) returns (Category);
  rpc ShowAuthor(AuthorId) returns (AuthorData);
  rpc UpdateAuthor(UpdateAuthorRequest) returns (Response);
  rpc UpdateCategory(UpdateCategoryRequest) returns (Response);
  rpc ShowCategory(CategoryId) returns (CategoryData);
  rpc DeleteCategory(CategoryId) returns (Response);
  rpc DeleteAuthor(AuthorId) returns (Response);
}